--- a/MusicAmp/Controls/SongDisplay.xaml
+++ b/MusicAmp/Controls/SongDisplay.xaml
@@ -7,20 +7,24 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Border CornerRadius="5" Background="#90000000"  >
-            <Grid>
+        <Border CornerRadius="5" Background="#90000000" >
+            <Grid Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="{Binding TimePlaying}" FontFamily="Consolas" FontSize="36" x:Name="TimePlayingTextBlock" Foreground="{Binding Foreground}"
-                           MouseLeftButtonDown="TimeBox_LeftButtonPressed" Visibility="Visible" Grid.Column="0" />
-                <TextBlock Text="{Binding TimeRemaining}" FontFamily="Consolas" FontSize="36" x:Name="TimeRemainingTextBlock" Foreground="{Binding Foreground}"
+                <TextBlock Text="{Binding TimePlaying, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="Consolas" FontSize="36" x:Name="TimePlayingTextBlock" 
+                           Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}" Margin="5"
+                           MouseLeftButtonDown="TimeBox_LeftButtonPressed" Visibility="Visible" Grid.Column="0" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding TimeRemaining, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="Consolas" FontSize="36" x:Name="TimeRemainingTextBlock" 
+                           Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="5"
                            MouseLeftButtonDown="TimeBox_LeftButtonPressed" Visibility="Collapsed" Grid.Column="0" />
-                <local:ScrollingTextDisplay Grid.Column="1" Margin="12 5 0 0" VerticalAlignment="Center" Foreground="{Binding Foreground}" FontSize="18" DisplayText="{Binding SongTitle}" />
+                <local:ScrollingTextDisplay Grid.Column="1" Margin="12 5 0 0" VerticalAlignment="Center"
+                                            Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}" FontSize="18" 
+                                            DisplayText="{Binding SongTitle, RelativeSource={RelativeSource AncestorType=UserControl}}" />
             </Grid>
         </Border>
-        <Border CornerRadius="5" Margin="2">
+        <Border CornerRadius="5" Margin="2" IsHitTestVisible="False">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0 0" EndPoint="0 1">
                     <GradientStop Color="#BBFFFFFF" Offset="0.0" />
@@ -32,7 +36,7 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
-        <Border CornerRadius="5" Margin="2">
+        <Border CornerRadius="5" Margin="2" IsHitTestVisible="False">
             <Border.Background>
                 <LinearGradientBrush StartPoint="1 0.5" EndPoint="0.6 0.5">
                     <GradientStop Color="#60FFFFFF" Offset="0.0" />
@@ -40,7 +44,7 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
-        <Border CornerRadius="5" Margin="2">
+        <Border CornerRadius="5" Margin="2" IsHitTestVisible="False">
             <Border.Background>
                 <LinearGradientBrush StartPoint="1 0" EndPoint="0.7 0.8">
                     <GradientStop Color="#80FFFFFF" Offset="0.0" />
