--- a/MusicAmp/Controls/SongDisplay.xaml
+++ b/MusicAmp/Controls/SongDisplay.xaml
@@ -19,7 +19,7 @@
                 <TextBlock Text="{Binding TimeRemaining, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="Consolas" FontSize="36" x:Name="TimeRemainingTextBlock" 
                            Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="5"
                            MouseLeftButtonDown="TimeBox_LeftButtonPressed" Visibility="Collapsed" Grid.Column="0" />
-                <local:ScrollingTextDisplay Grid.Column="1" Margin="12 5 0 0" VerticalAlignment="Center"
+                <local:ScrollingTextDisplay Grid.Column="1" Margin="12 5 0 0" VerticalAlignment="Stretch"
                                             Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=UserControl}}" FontSize="18" 
                                             DisplayText="{Binding SongTitle, RelativeSource={RelativeSource AncestorType=UserControl}}" />
             </Grid>
