working playback, work to be done on playlist

--- a/MusicAmp/Controls/PlaylistControl.xaml
+++ b/MusicAmp/Controls/PlaylistControl.xaml
@@ -161,6 +161,7 @@
                                     </ControlTemplate>
                                 </Setter.Value>
                             </Setter>
+                            <EventSetter Event="MouseDoubleClick" Handler="PlaylistItem_DoubleClicked" />
                         </Style>
                     </ListView.ItemContainerStyle>
                     <ListView.ItemTemplate>
@@ -171,8 +172,8 @@
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <TextBlock FontFamily="Segoe UI" FontSize="10" Foreground="{Binding ElementName=PlayListView, Path=Foreground}" 
-                                               Text="{Binding PlaylistItemDisplay, Mode=OneWay}" Grid.Column="0" />
-                                <TextBlock FontFamily="Segoe UI" FontSize="10" Foreground="{Binding ElementName=PlayListView, Path=Foreground}"
+                                               Text="{Binding PlaylistItemDisplay, Mode=OneWay}" Grid.Column="0"  />
+                                <TextBlock FontFamily="Segoe UI" FontSize="10" Foreground="{Binding ElementName=PlayListView, Path=Foreground}" MinWidth="20"
                                                Text="{Binding DurationTextMinutes, Mode=OneWay}" Grid.Column="1" Margin="0 0 10 0" />
                             </Grid>
                         </DataTemplate>
